# SimilarWordsDetectAlgorithm

./: README.md  detection.ipynb  pyproject.toml
