[tool.poetry]
name = "similarwordsdetectalgorithm"
version = "0.1.0"
description = ""
authors = ["juhwanlee <juhwanlee@diquest.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
levenshtein = "^0.25.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
